fixed overflow truth header size in min 993 siz media query in css

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -436,10 +436,10 @@ a:active {
     font-size: 24px;
   }
   .tnth-headline {
-    font-size: 32px;
+    font-size: 28px;
   }
   .tnth-subhead {
-    font-size: 29px;
+    font-size: 25px;
   }
   #fullSizeContainer {
     padding: 30px 0;
